--- a/css/bear.css
+++ b/css/bear.css
@@ -11,7 +11,8 @@ html {
 /* Write your solution here */
 
 @media only screen and (max-width: 1196px) {
-  #bear img {
+  #bear {
+    position: absolute;
     left: 800px;
   }
 }
