--- a/css/bear.css
+++ b/css/bear.css
@@ -12,7 +12,7 @@ html {
 
 @media only screen and (max-width: 1196px) {
   #bear {
-    position: absolute;
+    position: relative;
     left: 800px;
   }
 }
